other-vpol/block-pod-exec-by-pod-and-container/.chainsaw-test/chainsaw-step-02-apply-4.yaml
apiVersion: v1
kind: Pod
metadata:
  name: not-myapp
  namespace: bpe-podcontainer-ns
spec:
  containers:
  - command:
    - sleep
    - "300"
    image: busybox:1.35
    name: nginx
  - command:
    - sleep
    - "300"
    image: busybox:1.35
    name: busybox
