other-vpol/block-pod-exec-by-pod-and-container/.chainsaw-test/exception-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-maintenance-exception
  namespace: bpe-podcontainer-ns
spec:
  containers:
  - name: nginx
    image: busybox:1.35
    command: ["sleep", "3600"]
